add subject-relation table, api, and testclient
