# src/internal/openapi/ogen/oas_request_encoders_gen.go
@@ -25,6 +25,34 @@ func encodeCreateItemRequest(
 	return nil
 }
 
+func encodeCreateSubjectRequest(
+	req *SubjectCreateRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
+func encodeCreateSubjectRelationRequest(
+	req *SubjectRelationCreateRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeUpdateItemRequest(
 	req *ItemUpdateRequest,
 	r *http.Request,
